--- a/video_user_ingress.yaml
+++ b/video_user_ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: video-stream-ingress
 spec:
   rules:
-    - host: 159.75.186.36
+    - host: videostream.com
       http:
         paths:
           - path: /api/v1/video
