feature 0-001: video_stream yaml

--- a/video_stream/video_stream_deployment.yaml
+++ b/video_stream/video_stream_deployment.yaml
@@ -3,6 +3,9 @@ kind: Pod
 metadata:
   name: video-stream
 spec:
+  selector:
+    matchLabels:
+      app: videostream
   containers:
     - name: my-container
       image: registry.cn-hangzhou.aliyuncs.com/offersmaker/video_stream:latest
