--- a/video-stream/values.yaml
+++ b/video-stream/values.yaml
@@ -7,11 +7,11 @@ replicaCount: 3
 auth.enabled: false
 image:
   repository: registry.cn-hangzhou.aliyuncs.com/offersmaker/video_stream
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
-imagePullSecrets: 
+imagePullSecrets:
   - name: offermaker
 nameOverride: ""
 fullnameOverride: ""
@@ -45,7 +45,7 @@ service:
 ingress:
   enabled: false
   className: ""
-  annotations: 
+  annotations:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
